kubernetes/apps/kube-system/cilium/templates/cluster_network_policy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: disable-egress
specs:
  - endpointSelector:
      matchExpressions:
        - key: egress/enabled
          operator: NotIn
          values:
            - "true"
    egress:
      - toEntities:
          - cluster
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: kube-system
              k8s-app: kube-dns
        toPorts:
          - ports:
              - port: "53"
                protocol: ANY
            rules:
              dns:
                - matchPattern: "*"
  - endpointSelector:
      matchLabels:
        k8s-app: kube-dns
    egress:
      - toEntities:
          - world
        toPorts:
          - ports:
              - port: "53"
                protocol: ANY
            rules:
              dns:
                - matchPattern: "*"
---
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: route-to-nas
specs:
  - endpointSelector:
      matchLabels:
        route-to/nas: "true"
    egress:
      - toPorts:
          - ports:
              # NFS
              - port: "111"
                protocol: ANY
              - port: "892"
                protocol: ANY
              - port: "2049"
                protocol: ANY
              # minio
              - port: "9000"
                protocol: TCP
        toCIDRSet:
          - cidr: <path:kubernetes/data/internal/base#IP_NAS>/32
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/created-by: volsync
    egress:
      - toPorts:
          - ports:
              # minio
              - port: "9000"
                protocol: TCP
        toCIDRSet:
          - cidr: <path:kubernetes/data/internal/base#IP_NAS>/32
